-------------------------------------------------------------------------------
Changes in version 0.89

- Added support for content pattern rejection.

- Added a new "no-op" mail rule type.

- Defer looking up $MAXRCPTS and $RELAYCLIENT as well so that they can
  be set in the mailrules.
 
Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.88

- Fixed handling of "@domain" entries in mailrules lists and CDB files.

- Added patch from Marcelo Augusto <maugusto@stetnet.com.br> to allow
  for limits on the maximum number of recipients per message.

- Defer looking up $MAXHOPS and $HEADER_ADD so that they can be set in
  the mailrules.

- Added support for IMAP string literals in imapfront-auth.

- smtpfront now exports CVM environment variables after authentication.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.87

- Fixed a bug that prevented looping email detection from working.

- Fixed the Received: header generation to match the syntax described in
  RFC 2821.

- Added the link protocol (ie TCP or TCP6) to the Received: header.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.86

- Allow for addition of user-specified headers with $HEADER_ADD.

- SMTP front end now logs invalid commands.

- Added a hook for CVM validation of recipient addresses.

- Added support for RFC 1870 ESMTP SIZE extension.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/